# Screenshot2Chat

./: .gitattributes  .gitignore  INTEGRATION_COMPATIBILITY_TEST_SUMMARY.md  INTEGRATION_SUMMARY.md  NICKNAME_SCORING_IMPROVEMENT.md  README.md  app_independence_review.md  build_image_3.sh  check_python_env.sh  conversation_analysis_config.yaml  dockerfile  install_paddle_env.ps1  pyproject.toml  requirements.txt  test_fallback_mechanism.py  test_fallback_verification.py  test_split_columns_manual.py  test_split_columns_simple.py  verify_app_independence.py
config/: analysis_config.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONDITIONAL_PARALLEL_PIPELINE.md  CONFIG_MANAGER.md  MIGRATION_GUIDE.md  PERFORMANCE_MONITORING.md  SCREENSHOT2CHAT_使用说明书.md  USER_GUIDE.md  未使用代码分析报告.md  未使用代码清单.md  模块关系分析.md
examples/: adaptive_detection_demo.py  app_agnostic_text_boxes_demo.py  basic_pipeline_example.py  chat_detection_demo.py  checkpoint_phase3_demo.py  conditional_parallel_demo.py  config_manager_demo.py  demo.py  detector_usage_example.py  discord_chat_analysis_demo.py  extractor_usage_example.py  migration_example.py  model_manager_demo.py  model_manager_integration_example.py  performance_monitoring_demo.py  pipeline_usage_example.py  real_image_detection_demo.py  real_image_detection_demo2.py
how to detect chat bubble/: advice1.md  advice4.md  advice5.md
models/: registry.json
scripts/: analyze_chat.py
tests/: conftest.py  test_01_core.py  test_02_experience_formula1.py  test_02_experience_formula2.py  test_03_layout_analysis.py  test_04_recognition.py  (+27 more)
(+116 files in other folders)
