[project]
name = "chat-layout-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "Pillow>=9.0.0",
    "python-dotenv>=1.0.0",
    "pypdfium2>=5.2.0",
    "paddle>=1.2.0",
    "paddlex>=3.3.12",
    "opencv-python>=4.12.0.88",
    "opencv-contrib-python==4.12.0.88",
    "validators>=0.35.0",
    "statistics>=1.0.3.5",
    "joblib>=1.5.3",
]

[project.scripts]
chat-layout-analyzer = "chat_layout_analyzer:main"


[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort==5.12.0",
    "pytest==7.0.0",
]
