[project]
name = "screenshotanalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "Pillow>=9.0.0",
    "python-dotenv>=1.0.0",
    "pypdfium2>=5.2.0",
    "paddlex>=3.3.12",
    "opencv-python==4.10.0.84",
    "opencv-contrib-python==4.10.0.84",
    "validators>=0.35.0",
    "statistics>=1.0.3.5",
    "joblib>=1.5.3",
    "scikit-learn>=1.8.0",
    "snapy==1.1.8",
]



[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort==5.12.0",
    "pytest==7.0.0",
]
